unpackaged/objects/Billing_Rule__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Billing Rules</relationshipLabel>
        <relationshipName>Billing_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_rate__c</fullName>
        <label>Client rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Consultant_rate__c</fullName>
        <label>Consultant rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_billable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Billing Rules</relationshipLabel>
        <relationshipName>Billing_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Billing Rule</label>
    <nameField>
        <label>Billing Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Non_Billable</fullName>
        <active>true</active>
        <errorConditionFormula>Non_billable__c  == true</errorConditionFormula>
        <errorDisplayField>Account__c</errorDisplayField>
        <errorMessage>Client and consultant rates must be o.</errorMessage>
    </validationRules>
</CustomObject>